vercre-wallet/src/snapshots/vercre_wallet__presentation__tests__auth-request.snap
---
source: vercre-wallet/src/presentation.rs
assertion_line: 280
expression: app.view(&model)
---
credentials: []
status: Inactive

