vercre-wallet/src/snapshots/vercre_wallet__presentation__tests__create_submission.snap
---
source: vercre-wallet/src/presentation.rs
assertion_line: 501
expression: "&submission"
---
id: "[id]"
definition_id: cd4cf88c-adc9-48b9-91cf-12d8643bff73
descriptor_map:
  - id: EmployeeID_JWT
    format: jwt_vc_json
    path: $
    path_nested:
      format: jwt_vc_json
      path: "$.verifiableCredential[0]"
