vercre-wallet/src/snapshots/vercre_wallet__presentation__tests__new-request.snap
---
source: vercre-wallet/src/presentation.rs
assertion_line: 293
expression: app.view(&model)
---
credentials: []
status: Inactive

