vercre-wallet/src/snapshots/vercre_wallet__presentation__tests__set-request.snap
---
source: vercre-wallet/src/presentation.rs
assertion_line: 284
expression: app.view(&model)
---
credentials: []
status: Requested

